--- a/helm/app-operator/templates/configmap.yaml
+++ b/helm/app-operator/templates/configmap.yaml
@@ -16,6 +16,7 @@ data:
     service:
       app:
         helmControllerBackend: {{  .Values.app.helmControllerBackend }}
+        helmControllerBackendAutoMigration: {{  .Values.app.helmControllerBackendAutoMigration }}
         unique: {{ include "resource.app.unique" . }}
         watchNamespace: '{{ .Values.app.watchNamespace }}'
         workloadClusterID: '{{ .Values.app.workloadClusterID }}'
