--- a/helm/app-operator/values.yaml
+++ b/helm/app-operator/values.yaml
@@ -86,3 +86,7 @@ securityContext:
   runAsNonRoot: true
   seccompProfile:
     type: RuntimeDefault
+
+global:
+  podSecurityStandards:
+    enforced: false
