--- a/helm/app-operator/templates/psp.yaml
+++ b/helm/app-operator/templates/psp.yaml
@@ -1,3 +1,4 @@
+{{- if not (((.Values.global).podSecurityStandards).enforced) }}
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
@@ -29,3 +30,4 @@ spec:
   hostNetwork: {{ .Values.initialBootstrapMode }}
   hostIPC: false
   hostPID: false
+{{- end }}
