--- a/helm/app-operator/values.yaml
+++ b/helm/app-operator/values.yaml
@@ -66,3 +66,7 @@ verticalPodAutoscaler:
 # (such as the CNI or the out-of-tree cloud controller managers) as a managed app.
 # After the cluster is fully deployed, this flag should be switched to false.
 initialBootstrapMode: false
+
+global:
+  podSecurityStandards:
+    enforced: false
