--- a/helm/app-operator/templates/psp.yaml
+++ b/helm/app-operator/templates/psp.yaml
@@ -1,4 +1,4 @@
-{{- if .Capabilities.APIVersions.Has "policy/v1beta1" }}
+{{- if not (((.Values.global).podSecurityStandards).enforced) }}
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
