--- a/helm/app-operator/values.yaml
+++ b/helm/app-operator/values.yaml
@@ -93,3 +93,7 @@ serviceMonitor:
   interval: "60s"
   # -- (duration) Prometheus scrape timeout.
   scrapeTimeout: "45s"
+
+global:
+  podSecurityStandards:
+    enforced: false
