Bring back conditional in case Kyverno doesn't exist yet

--- a/helm/app-operator/templates/policyexception.yaml
+++ b/helm/app-operator/templates/policyexception.yaml
@@ -1,12 +1,11 @@
 {{- if .Values.kyvernoPolicyExceptions.enabled }}
 {{- if .Values.bootstrapMode.enabled }}
-{{- if .Capabilities.APIVersions.Has "kyverno.io/v2/PolicyException" }}
+{{- if .Capabilities.APIVersions.Has "kyverno.io/v2beta1/PolicyException" }}
+  {{- if .Capabilities.APIVersions.Has "kyverno.io/v2/PolicyException" }}
 apiVersion: kyverno.io/v2
-{{- else if .Capabilities.APIVersions.Has "kyverno.io/v2beta1/PolicyException" }}
+  {{- else }}
 apiVersion: kyverno.io/v2beta1
-{{- else }}
-apiVersion: kyverno.io/v2alpha1
-{{- end }}
+  {{- end }}
 kind: PolicyException
 metadata:
   name: {{ include "resource.default.name" . }}-bootstrap-mode
@@ -32,5 +31,6 @@ spec:
           - {{ include "resource.default.namespace" . }}
         names:
           - "{{ include "resource.default.name" . }}*"
+{{- end -}}
 {{- end -}}
 {{- end -}}
