--- a/helm/app-operator/templates/policyexception.yaml
+++ b/helm/app-operator/templates/policyexception.yaml
@@ -1,7 +1,11 @@
 {{- if .Values.kyvernoPolicyExceptions.enabled }}
 {{- if .Values.bootstrapMode.enabled }}
-{{- if .Capabilities.APIVersions.Has "kyverno.io/v2alpha1/PolicyException" -}}
-apiVersion: kyverno.io/v2alpha1
+{{- if .Capabilities.APIVersions.Has "kyverno.io/v2beta1/PolicyException" }}
+  {{- if .Capabilities.APIVersions.Has "kyverno.io/v2/PolicyException" }}
+apiVersion: kyverno.io/v2
+  {{- else }}
+apiVersion: kyverno.io/v2beta1
+  {{- end }}
 kind: PolicyException
 metadata:
   name: {{ include "resource.default.name" . }}-bootstrap-mode
