--- a/helm/app-operator/templates/rbac.yaml
+++ b/helm/app-operator/templates/rbac.yaml
@@ -74,6 +74,13 @@ rules:
     - get
     - list
 - apiGroups:
+    - source.toolkit.fluxcd.io
+  resources:
+    - helmcharts
+  verbs:
+    - get
+    - list
+- apiGroups:
     - ""
   resources:
     - configmaps
