--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,161 +5,169 @@ orbs:
 workflows:
   build:
     jobs:
-      - architect/go-build:
-          context: architect
-          name: go-build
-          binary: app-operator
-          filters:
-            tags:
-              only: /^v.*/
+    - architect/go-build:
+        context: architect
+        name: go-build
+        binary: app-operator
+        filters:
+          tags:
+            only: /^v.*/
 
-      - architect/push-to-registries:
-          context: architect
-          name: push-to-registries
-          requires:
-            - go-build
-          filters:
-            tags:
-              only: /^v.*/
+    - architect/push-to-registries:
+        context: architect
+        name: push-to-registries
+        requires:
+        - go-build
+        filters:
+          tags:
+            only: /^v.*/
 
-      - architect/push-to-app-catalog:
-          context: architect
-          name: push-app-operator-to-control-plane-app-catalog
-          app_catalog: "control-plane-catalog"
-          app_catalog_test: "control-plane-test-catalog"
-          chart: "app-operator"
-          requires:
-            - push-to-registries
-          filters:
-            tags:
-              only: /^v.*/
+          branches:
+            ignore:
+            - main
+            - master
+    - architect/push-to-app-catalog:
+        context: architect
+        name: push-app-operator-to-control-plane-app-catalog
+        app_catalog: control-plane-catalog
+        app_catalog_test: control-plane-test-catalog
+        chart: app-operator
+        requires:
+        - push-to-registries
+        filters:
+          tags:
+            only: /^v.*/
 
-      - architect/integration-test:
-          context: architect
-          name: basic-integration-test
-          install-app-platform: false
-          setup-script: "integration/setup/setup.sh"
-          test-dir: "integration/test/app/basic"
-          requires:
-            - go-build
-            - push-app-operator-to-control-plane-app-catalog
+          branches:
+            ignore:
+            - main
+            - master
+    - architect/integration-test:
+        context: architect
+        name: basic-integration-test
+        install-app-platform: false
+        setup-script: integration/setup/setup.sh
+        test-dir: integration/test/app/basic
+        requires:
+        - go-build
+        - push-app-operator-to-control-plane-app-catalog
 
-      - architect/integration-test:
-          context: architect
-          name: appcatalogentry-integration-test
-          setup-script: "integration/setup/setup.sh"
-          test-dir: "integration/test/catalog/appcatalogentry"
-          requires:
-            - go-build
-            - push-app-operator-to-control-plane-app-catalog
+    - architect/integration-test:
+        context: architect
+        name: appcatalogentry-integration-test
+        setup-script: integration/setup/setup.sh
+        test-dir: integration/test/catalog/appcatalogentry
+        requires:
+        - go-build
+        - push-app-operator-to-control-plane-app-catalog
 
-      - architect/integration-test:
-          context: architect
-          name: watching-configmap-integration-test
-          setup-script: "integration/setup/setup.sh"
-          test-dir: "integration/test/watcher/configmap"
-          requires:
-            - go-build
-            - push-app-operator-to-control-plane-app-catalog
+    - architect/integration-test:
+        context: architect
+        name: watching-configmap-integration-test
+        setup-script: integration/setup/setup.sh
+        test-dir: integration/test/watcher/configmap
+        requires:
+        - go-build
+        - push-app-operator-to-control-plane-app-catalog
 
-      - architect/integration-test:
-          context: architect
-          name: workload-cluster-integration-test
-          setup-script: "integration/setup/setup.sh"
-          test-dir: "integration/test/app/workload"
-          requires:
-            - go-build
-            - push-app-operator-to-control-plane-app-catalog
+    - architect/integration-test:
+        context: architect
+        name: workload-cluster-integration-test
+        setup-script: integration/setup/setup.sh
+        test-dir: integration/test/app/workload
+        requires:
+        - go-build
+        - push-app-operator-to-control-plane-app-catalog
 
-      - architect/push-to-app-collection:
-          context: architect
-          name: push-app-operator-to-aws-app-collection
-          app_name: "app-operator"
-          app_collection_repo: "aws-app-collection"
-          requires:
-            - push-app-operator-to-control-plane-app-catalog
-            - push-to-registries
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              only: /^v.*/
+    - architect/push-to-app-collection:
+        context: architect
+        name: push-app-operator-to-aws-app-collection
+        app_name: app-operator
+        app_collection_repo: aws-app-collection
+        requires:
+        - push-app-operator-to-control-plane-app-catalog
+        - push-to-registries
+        filters:
+          branches:
+            ignore: /.*/
+          tags:
+            only: /^v.*/
 
-      - architect/push-to-app-collection:
-          context: architect
-          name: push-app-operator-to-azure-app-collection
-          app_name: "app-operator"
-          app_collection_repo: "azure-app-collection"
-          requires:
-            - push-app-operator-to-control-plane-app-catalog
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              only: /^v.*/
+    - architect/push-to-app-collection:
+        context: architect
+        name: push-app-operator-to-azure-app-collection
+        app_name: app-operator
+        app_collection_repo: azure-app-collection
+        requires:
+        - push-app-operator-to-control-plane-app-catalog
+        filters:
+          branches:
+            ignore: /.*/
+          tags:
+            only: /^v.*/
 
-      - architect/push-to-app-collection:
-          context: architect
-          name: push-app-operator-to-vsphere-app-collection
-          app_name: "app-operator"
-          app_collection_repo: "vsphere-app-collection"
-          requires:
-            - push-app-operator-to-control-plane-app-catalog
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              only: /^v.*/
+    - architect/push-to-app-collection:
+        context: architect
+        name: push-app-operator-to-vsphere-app-collection
+        app_name: app-operator
+        app_collection_repo: vsphere-app-collection
+        requires:
+        - push-app-operator-to-control-plane-app-catalog
+        filters:
+          branches:
+            ignore: /.*/
+          tags:
+            only: /^v.*/
 
 
-      - architect/push-to-app-collection:
-          name: push-to-cloud-director-app-collection
-          context: architect
-          app_name: "app-operator"
-          app_collection_repo: "cloud-director-app-collection"
-          requires:
-            - push-app-operator-to-control-plane-app-catalog
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              only: /^v.*/
+    - architect/push-to-app-collection:
+        name: push-to-cloud-director-app-collection
+        context: architect
+        app_name: app-operator
+        app_collection_repo: cloud-director-app-collection
+        requires:
+        - push-app-operator-to-control-plane-app-catalog
+        filters:
+          branches:
+            ignore: /.*/
+          tags:
+            only: /^v.*/
 
-      - architect/push-to-app-collection:
-          context: architect
-          name: push-to-capa-app-collection
-          app_name: "app-operator"
-          app_collection_repo: "capa-app-collection"
-          requires:
-            - push-app-operator-to-control-plane-app-catalog
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              only: /^v.*/
+    - architect/push-to-app-collection:
+        context: architect
+        name: push-to-capa-app-collection
+        app_name: app-operator
+        app_collection_repo: capa-app-collection
+        requires:
+        - push-app-operator-to-control-plane-app-catalog
+        filters:
+          branches:
+            ignore: /.*/
+          tags:
+            only: /^v.*/
 
-      - architect/push-to-app-collection:
-          context: architect
-          name: push-to-capz-app-collection
-          app_name: "app-operator"
-          app_collection_repo: "capz-app-collection"
-          requires:
-            - push-app-operator-to-control-plane-app-catalog
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              only: /^v.*/
+    - architect/push-to-app-collection:
+        context: architect
+        name: push-to-capz-app-collection
+        app_name: app-operator
+        app_collection_repo: capz-app-collection
+        requires:
+        - push-app-operator-to-control-plane-app-catalog
+        filters:
+          branches:
+            ignore: /.*/
+          tags:
+            only: /^v.*/
 
-      - architect/push-to-app-collection:
-          context: architect
-          name: push-to-gcp-app-collection
-          app_name: "app-operator"
-          app_collection_repo: "gcp-app-collection"
-          requires:
-            - push-app-operator-to-control-plane-app-catalog
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              only: /^v.*/
+    - architect/push-to-app-collection:
+        context: architect
+        name: push-to-gcp-app-collection
+        app_name: app-operator
+        app_collection_repo: gcp-app-collection
+        requires:
+        - push-app-operator-to-control-plane-app-catalog
+        filters:
+          branches:
+            ignore: /.*/
+          tags:
+            only: /^v.*/
