--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,7 @@ workflows:
             - master
     - architect/push-to-app-catalog:
         context: architect
+        executor: app-build-suite
         name: push-app-operator-to-control-plane-app-catalog
         app_catalog: control-plane-catalog
         app_catalog_test: control-plane-test-catalog
