--- a/helm/app-operator/templates/deployment.yaml
+++ b/helm/app-operator/templates/deployment.yaml
@@ -51,7 +51,7 @@ spec:
         {{- end }}
       containers:
       - name: {{ include "name" . }}
-        image: "{{ .Values.registry.domain }}/{{ .Values.image.repository }}:{{ .Chart.Version }}"
+        image: "{{ .Values.registry.domain }}/{{ .Values.image.repository }}:{{ include "image.tag" }}"
         volumeMounts:
         - name: {{ include "name" . }}-configmap
           mountPath: /var/run/{{ include "name" . }}/configmap/
